--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
     </header>
     <div class="posts">
         <article>
-            <a href="noblesse" class="image"><img src="images/noblesse.jpg" alt="" /></a>
+            <a href="https://colline-du-lion.de" class="image"><img src="images/noblesse.jpg" alt="" /></a>
             <h3>Pyrenäenberghunde</h3>
             <p>Meine Familie züchtet mit viel Liebe Pyrenäenberghunde, welche gelegentlich auch verkauft werden. Bei
                 Interesse schauen Sie sich die Seite an.</p>
             <ul class="actions">
-                <li><a href="noblesse" class="button">Zur Webseite</a></li>
+                <li><a href="https://colline-du-lion.de" class="button">Zur Webseite</a></li>
             </ul>
         </article>
         <article>
@@ -188,7 +188,7 @@
         </section>
         <!-- Footer -->
         <footer id="footer">
-            <p class="copyright">&copy; Ludwig Austermann 2020. All rights reserved. Design: <a
+            <p class="copyright">&copy; Ludwig Austermann 2022. All rights reserved. Design: <a
                     href="https://html5up.net">HTML5 UP</a>.</p>
         </footer>
     </div>
