--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             hilfreiche Lernhilfen für meine Tutorien sowie nützliche oder interessante Projekte zur freien Verfügung.
         </p>
         <ul class="actions">
-            <li><a href="cv.html" class="button big">Erfahren Sie mehr über mich</a></li>
+            <li><a href="cv" class="button big">Erfahren Sie mehr über mich</a></li>
         </ul>
     </div>
     <span class="image object">
@@ -55,7 +55,7 @@
         <article>
             <span class="icon fa-file"></span>
             <div class="content">
-                <a href="cv.html">
+                <a href="cv">
                     <h3>Lebenslauf</h3>
                 </a>
                 <p>Hier können Sie eine (gekürzte) Version meines Lebenslaufes einsehen. Für die komplette PDF-Version
@@ -65,7 +65,7 @@
         <article>
             <span class="icon solid fa-calculator"></span>
             <div class="content">
-                <a href="mathematics.html">
+                <a href="mathematics">
                     <h3>Mathematik</h3>
                 </a>
                 <p>Hier finden Sie verschiedene mathematische Artikel, sowie Lernhilfen für Tutorien und andere
@@ -75,7 +75,7 @@
         <article>
             <span class="icon solid fa-rocket"></span>
             <div class="content">
-                <a href="projects.html">
+                <a href="projects">
                     <h3>Projekte</h3>
                 </a>
                 <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante
@@ -85,7 +85,7 @@
         <article>
             <span class="icon solid fa-newspaper"></span>
             <div class="content">
-                <a href="further.html">
+                <a href="further">
                     <h3>Sonstiges</h3>
                 </a>
                 <p>Von hier können Sie auf alle weiteren Seiten dieser Webseite zugreifen, welche nicht unter den
